@@ -9,6 +9,7 @@
 =====================================================================
 
 Version 4.3.x CA
+ - Added: GEDFact_assistant/_CENS/ module - Added paste-back of Final Census Date from Assistant window to Add Census Event window. (windmillway)
  - Changed: GEDFact_assistant/_CENS/ module - The date field on the Assistant window is now hidden. (windmillway)
  - Added: Auto propagate Census Date info from Census window to Census Assistant window initial set-up. (windmillway)
  - Changed: Minor corrections to some theme modules.css. (windmillway)
